# claude-dev-skills

./: .gitignore  AGENTS.md  README.md  install.sh  marketplace.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.gitea/workflows/: check-commits.yml  enforce-org-settings.yml
config/: infrastructure.md  repos.md
gitea_workflow/: deploy_config.py  gitea_client.py  labels.py  server.py
hooks/: pre-receive
lib/: ISSUE_STANDARDS.md  PR_STANDARDS.md  agent-coordination.md  agent-identity.md  commit-push.md  deploy-aware-label.md  label-issue.md  planning-common.md  pr-status-labels.md  quality-gate.md  resolve-repo.md  review-checklists.md  session-state.md  status-labels.md
planning-skills/: README.md
planning-skills/analyze-idea/: SKILL.md
planning-skills/create-issues/: SKILL.md
planning-skills/plan-project/: SKILL.md
planning-skills/plan-the-thing/: SKILL.md
plugins/dev-workflow/: .mcp.json
plugins/planning/: .mcp.json
plugins/productivity-hooks/: hooks.json
scripts/: enforce-org-settings.py  sync-libs.sh
setup/: README.md  env-config.yaml  new-device-prompt.md  wireguard-prompt.md
setup/wsl-sandbox/: setup-linux.sh  setup-windows.ps1  teardown-windows.ps1
skills/: README.md
skills/add-active/: SKILL.md
skills/add-future/: SKILL.md
skills/backup-status/: SKILL.md
skills/catch-up/: SKILL.md
skills/check-ci/: SKILL.md
skills/check-in/: SKILL.md
skills/clear/: SKILL.md
skills/clear-session/: SKILL.md
tests/: test_gitea_client.py  test_list_milestone_issues_tool.py  test_server_validation.py
(+115 files in other folders)
