[project]
name = "gitea-workflow-mcp"
version = "0.2.0"
description = "Gitea workflow MCP server with label-managed operations"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp[cli]>=1.0",
]

[project.scripts]
gitea-workflow-mcp = "gitea_workflow.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gitea_workflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
